--- a/EmpInfo/Views/Report/PrintUC.cshtml
+++ b/EmpInfo/Views/Report/PrintUC.cshtml
@@ -89,15 +89,15 @@
             <td style="font-weight:bold;">@h.market_administration</td>
         </tr>
         <tr>
-            <td>营运物流部:</td>
-            <td style="font-weight:bold;">@h.stock_administration</td>
+            @*<td>营运物流部:</td>
+            <td style="font-weight:bold;">@h.stock_administration</td>*@
             <td>会计部主管:</td>
             <td style="font-weight:bold;">@h.accounting_minister</td>
-        </tr>
-        <tr>
+        @*</tr>
+        <tr>*@
             <td>行政部总经理:</td>
             <td style="font-weight:bold;">@h.administration_manager</td>
-            <td></td><td></td>
+            @*<td></td><td></td>*@
         </tr>
         <tr>
             <td colspan="4">
