--- a/EmpInfo/Views/Apply/BeginAuditJQApply.cshtml
+++ b/EmpInfo/Views/Apply/BeginAuditJQApply.cshtml
@@ -2,9 +2,11 @@
 @using Newtonsoft.Json;
 @{
     BeginAuditModel bam = (BeginAuditModel)ViewData["bam"];
+    JQAuditOtherInfoModel otherInfo = (JQAuditOtherInfoModel)bam.otherInfo;
     string auditJson = JsonConvert.SerializeObject(bam.otherInfo);
 }
 @section CSS{
+    <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap-datetimepicker.min.css")" />
     <style type="text/css">
         .b-label {
             display: inline-block;
@@ -29,8 +31,18 @@
 
 }
 @section Scripts {
+    <script src="@Url.Content("~/Scripts/bootstrap-datetimepicker.min.js")"></script>
+    <script src="@Url.Content("~/Scripts/bootstrap-datetimepicker.zh-CN.js")"></script>
     <script>
         $(function () {
+            $(".datePicker").datetimepicker({
+                language: 'zh-CN',
+                format: "yyyy-mm-dd",
+                autoclose: true,
+                startView: 2,
+                minView: 2,
+                initialDate: "@DateTime.Now.ToString("yyyy-MM-dd")"
+            });
             $("#applyContent").load("CheckApply", { sysNo: "@bam.sysNum" }, function () {
                 $($("#applyContent .panel-heading")[0]).html("<i class='fa fa-list'></i> @bam.billTypeName 详情");
                 $("#waiting").remove();
@@ -48,7 +60,8 @@
                     work_evaluation: $("#work_evaluation").val(),
                     work_comment: $("#work_comment").val(),
                     wanna_employ: $("#wanna_employ").val(),
-                    employ_comment: $("#employ_comment").val()
+                    employ_comment: $("#employ_comment").val(),
+                    leave_date:$("#leave_date").val()
                 }, function (data) {
                     if (data.suc) {
                         toastr.success(data.msg);
@@ -75,6 +88,19 @@
         <div class="panel-body">
             @if (bam.isPass == null) { 
             <form id="auditForm">
+                @if (otherInfo.quit_type == "辞职") { 
+                <div class="b-div">
+                    <span class="b-label" style="vertical-align:top;">
+                        批准离职时间:
+                    </span>
+                    <span style="display:inline-block;width:70%">
+                        <span class="input-group date datePicker">
+                            <input class="form-control" type="text" id="leave_date" name="leave_date" autocomplete="off" />
+                            <span class="input-group-addon"><i class="fa fa-calendar"></i> </span>
+                        </span>
+                    </span>
+                </div>
+                }
                 <div class="b-div">
                     <span class="b-label" style="vertical-align:top;">
                         工作评价:
@@ -98,7 +124,7 @@
                 </div>
                 <div class="b-div">
                     <span class="b-label" style="vertical-align:top;">
-                        原部是否愿意再录用:
+                        本部是否再录用:
                     </span>
                     <span style="display:inline-block;width:70%">
                         <select class="form-control" name="wanna_employ" id="wanna_employ">
@@ -111,7 +137,7 @@
                 </div>
                 <div class="b-div">
                     <span class="b-label" style="vertical-align:top;">
-                        是否愿意再录用原因:
+                        是否再录用原因:
                     </span>
                     <span style="display:inline-block;width:70%">
                         <textarea type="text" class="form-control" rows="3" id="employ_comment" name="employ_comment" placeholder="是否愿意再次录用此离职员工的原因"></textarea>
