--- a/EmpInfo/Views/Apply/CheckJQApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckJQApply.cshtml
@@ -325,6 +325,14 @@
                         @m.quit_suggestion
                     </div>
                 </div>
+                <div class="b-div">
+                    <span class="b-label" style="vertical-align:top;">
+                        工资发放要求:
+                    </span>
+                    <div class="b-input">
+                        @m.salary_clear_way
+                    </div>
+                </div>
             </div>
             }
             
@@ -400,6 +408,16 @@
         @if (!string.IsNullOrEmpty(m.work_evaluation)) {
             <div>
                 <h4 style="border-bottom:1px solid #337ab7;font-style:italic" class="text-primary">处理人评价信息</h4>
+                @if (m.quit_type == "辞职") { 
+                <div class="b-div">
+                    <span class="b-label" style="vertical-align:top;width:150px;">
+                        批准离职时间:
+                    </span>
+                    <span style="display:inline-block;width:70%">
+                        @(m.leave_date==null?"":((DateTime)m.leave_date).ToString("yyyy-MM-dd"))
+                    </span>
+                </div>
+                }
                 <div class="b-div">
                     <span class="b-label" style="vertical-align:top;width:150px;">
                         工作评价:
@@ -418,7 +436,7 @@
                 </div>
                 <div class="b-div">
                     <span class="b-label" style="vertical-align:top;width:150px;">
-                        原部是否愿意再录用:
+                        本部是否再录用:
                     </span>
                     <span style="display:inline-block;width:70%">
                         @m.wanna_employ
@@ -426,7 +444,7 @@
                 </div>
                 <div class="b-div">
                     <span class="b-label" style="vertical-align:top;width:150px;">
-                        是否愿意再录用原因:
+                        是否再录用原因:
                     </span>
                     <span style="display:inline-block;width:70%">
                         @m.employ_comment
