--- a/EmpInfo/Views/Home/Index.cshtml
+++ b/EmpInfo/Views/Home/Index.cshtml
@@ -148,6 +148,8 @@
 
         //进入饭卡查询界面
         $("#diningCardBt,#mealImg").click(function () {
+            toastr.error("因食堂服务器出现故障，此功能暂停使用");
+            return;
             window.location.href = "@Url.Content("~/Home/CheckDinningCard")";
         });
         //管理员入口
