--- a/EmpInfo/Views/Home/NoPaperProcess.cshtml
+++ b/EmpInfo/Views/Home/NoPaperProcess.cshtml
@@ -29,13 +29,13 @@
                     </a>
                 </div> 
             }
-            @if (auts.IndexOf("ModuelTest") >= 0) { 
             <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/Apply/ApplyIndex?billType=JQ")">
                     <img src="@Url.Content("~/Content/images/quit.png")" alt="员工辞职/自离申请" class="center-block" />
                     <p class="text-center">员工辞职/自离申请</p>
                 </a>
             </div>
+            @if (auts.IndexOf("SJProcess") >= 0) { 
             <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/Apply/ApplyIndex?billType=SJ")">
                     <img src="@Url.Content("~/Content/images/switch.png")" alt="员工调动申请" class="center-block" />
