--- a/EmpInfo/Views/Report/CheckAssistantEmp.cshtml
+++ b/EmpInfo/Views/Report/CheckAssistantEmp.cshtml
@@ -9,8 +9,8 @@
         <ol class="breadcrumb" style="margin:0;padding:0; background-color:transparent;">
             <li><span class="glyphicon glyphicon-hand-right"></span></li>
             <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
-            <li><a href="@Url.Content("~/Admin/AdminIndex")">管理员工具栏</a></li>
-            <li><a href="@Url.Content("~/Report/AssistantEmps")">基干/辅助员工查询</a></li>
+            <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公集合</a></li>
+            <li><a href="@Url.Content("~/Report/AssistantEmps")">基辅员工查询</a></li>
             <li class="active">查看明细</li>
         </ol>
     </div>
