--- a/EmpInfo/Views/Apply/BeginApplySP.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplySP.cshtml
@@ -68,6 +68,15 @@
                         toastr.error("寄件时，放行条编号必须填写");
                         return;
                     }
+                    if (obj.from_addr.indexOf("汕尾") < 0) {
+                        toastr.error("从外地发往汕尾的，【收寄类型】请选择收件");
+                        return;
+                    }
+                } else {
+                    if (obj.to_addr.indexOf("汕尾") < 0) {
+                        toastr.error("从汕尾既往外地的，【收寄类型】请选择寄件");
+                        return;
+                    }
                 }
                 if (obj.content_type == "") {
                     toastr.error("收寄内容必须选择");
@@ -181,7 +190,7 @@
             <li><span class="glyphicon glyphicon-hand-right"></span></li>
             <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
             <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公集合</a></li>
-            <li><a href="ApplyIndex?billType=SP">部门寄件收件申请</a></li>
+            <li><a href="ApplyIndex?billType=SP">寄/收件申请</a></li>
             <li class="active">开始申请</li>
         </ol>
     </div>
@@ -246,8 +255,12 @@
                         <div class="b-input">
                             <select class="form-control" name="send_or_receive" id="send_or_receive">
                                 <option value="">---- 下拉选择收寄类型 ----</option>
-                                <option value="寄件">寄件</option>
-                                <option value="收件">收件</option>
+                                <optgroup label="从汕尾寄往外地的请选择寄件">
+                                    <option value="寄件">寄件</option>
+                                </optgroup>
+                                <optgroup label="从外地寄往汕尾的请选择收件">
+                                    <option value="收件">收件</option>
+                                </optgroup>
                             </select>
                         </div>
                     </div>
@@ -269,7 +282,7 @@
                         </span>
                         <div class="b-input">
                             <select class="form-control" name="content_type" id="content_type">
-                                <option value="">---- 下拉选择收寄内容 ----</option>
+                                <option value="">---- 下拉选择收寄内容 ----</option>                                
                                 <option value="产品">产品</option>
                                 <option value="文件">文件</option>
                             </select>
@@ -377,7 +390,7 @@
                             寄件地址:
                         </span>
                         <span class="b-input">
-                            <input type="text" class="form-control" name="from_addr" />
+                            <input type="text" class="form-control" name="from_addr" placeholder="至少包含省和市" />
                         </span>
                     </div>
                 </div>
@@ -387,7 +400,7 @@
                             收件地址:
                         </span>
                         <span class="b-input">
-                            <input type="text" class="form-control" name="to_addr" />
+                            <input type="text" class="form-control" name="to_addr" placeholder="至少包含省和市" />
                         </span>
                     </div>
                 </div>
