--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -89,20 +89,18 @@
                         <p class="text-center">紧急出货运输</p>
                     </a>
                 </div>
-            }            
-            @if (auts.IndexOf("ModuelTest") >= 0) {
+            }
             <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/Apply/ApplyIndex?billType=SP")">
                     <img src="@Url.Content("~/Content/images/cargo.png")" alt="sp" class="center-block" />
-                    <p class="text-center">部门寄件/收件流程</p>
+                    <p class="text-center">寄/收件流程</p>
                 </a>
             </div>
-            }
             @if (auts.IndexOf("AssistantEmps") >= 0) {
                 <div class="col-xs-4 col-sm-3 col-md-2">
                     <a href="@Url.Content("~/Report/AssistantEmps")">
                         <img src="@Url.Content("~/Content/images/assist.png")" alt="assist" class="center-block" />
-                        <p class="text-center">基干/辅助职员查询</p>
+                        <p class="text-center">基辅职员查询</p>
                     </a>
                 </div>
             }
@@ -115,7 +113,7 @@
             <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/Home/EleProcess")">
                     <img src="@Url.Content("~/Content/images/elepr.png")" alt="elepr" class="center-block" />
-                    <p class="text-center">电子公司专用流程</p>
+                    <p class="text-center">电子公司流程</p>
                 </a>
             </div>            
             <div class="col-xs-4 col-sm-3 col-md-2">
